--- a/index.html
+++ b/index.html
@@ -4,8 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Market</title>
+     <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
+    <header>
+
+        <!-- nav section -->
+
+          <section class="nav_section">
+        <div class="logo_img">
+          <img src="./assets/logo.png" alt="" />
+        </div>
+        <div>
+          <nav>
+            <ul>
+              <li><a href="" class="nav_color show_item">Home</a></li>
+              <li><a href="" class="show_item">Shop</a></li>
+              <li><a href="" class="show_item">About us</a></li>
+              <li>
+                <a href="" class="nav_second_color"
+                  ><i class="fa-solid fa-cart-shopping"></i>Cart ($56)</a
+                >
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </section>
+
+      
+
+    </header>
     
 </body>
 </html>
