--- a/index.html
+++ b/index.html
@@ -37,7 +37,22 @@
           </nav>
         </div>
       </section>
+<!-- HERO FLOWERS section  -->
 
+  <section class="fresh_flowers">
+        <div class="alwayea_section">
+          <h2 class="noto_saris"><span>ALWAYS</span> FRESH FLOWERS</h2>
+          <p>
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh flowers that are perfect for any occasion.
+          </p>
+        </div>
+        <div>
+          <img src="./assets/hero-flower.png" alt="" />
+        </div>
+      </section>
+    </header>
       
 
     </header>
