our plants section

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
           </nav>
         </div>
       </section>
-<!-- HERO FLOWERS section  -->
+      <!-- HERO FLOWERS section  -->
 
-  <section class="fresh_flowers">
+     <section class="fresh_flowers">
         <div class="alwayea_section">
           <h2 class="noto_saris"><span>ALWAYS</span> FRESH FLOWERS</h2>
           <p>
@@ -53,6 +53,72 @@
         </div>
       </section>
     </header>
+
+    
+    <main>
+      <!-- our plants section  -->
+
+
+      <section>
+        <div class="plants_section">
+          <h3 class="noto_saris"><span class="font_color">Our</span> Plants</h3>
+          <p>
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh.
+          </p>
+        </div>
+        <div class="plants_img_section">
+          <div class="plants_img">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h4>Lily Blossom</h4>
+            <span>20 USD</span>
+            <button>ADD TO CART</button>
+          </div>
+          <div class="plants_img">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h4>Lily Blossom</h4>
+            <span>20 USD</span>
+            <button>ADD TO CART</button>
+          </div>
+          <div class="plants_img">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h4>Lily Blossom</h4>
+            <span>20 USD</span>
+            <button>ADD TO CART</button>
+          </div>
+          <div class="plants_img">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h4>Lily Blossom</h4>
+            <span>20 USD</span>
+            <button>ADD TO CART</button>
+          </div>
+          <div class="plants_img">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h4>Lily Blossom</h4>
+            <span>20 USD</span>
+            <button>ADD TO CART</button>
+          </div>
+          <div class="plants_img">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h4>Lily Blossom</h4>
+            <span>20 USD</span>
+            <button>ADD TO CART</button>
+          </div>
+          <div class="plants_img">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h4>Lily Blossom</h4>
+            <span>20 USD</span>
+            <button>ADD TO CART</button>
+          </div>
+          <div class="plants_img">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <h4>Lily Blossom</h4>
+            <span>20 USD</span>
+            <button>ADD TO CART</button>
+          </div>
+        </div>
+      </section>
       
 
     </header>
