--- a/index.html
+++ b/index.html
@@ -146,8 +146,47 @@
                 </div>
             </div>
         </section>
+         <section>
+        <div class="latest_text">
+          <h2 class="noto_saris">
+            <span class="font_color">Latest</span> Deals
+          </h2>
+          <p>
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh.
+          </p>
+        </div>
+        <div class="cards">
+          <div class="left_card">
+            <div class="small_card">
+              <img src="./assets/deal-bloom.png" alt="" />
+              <div class="text_card">
+                <h3 class="noto_saris">60% Off | Bloom Plant</h3>
+                <a href="">Shop Now</a>
+              </div>
+            </div>
+            <div class="small_card">
+              <img src="./assets/deal-bloom.png" alt="" />
+              <div class="text_card">
+                <h3 class="noto_saris">60% Off | Bloom Plant</h3>
+                <a href="">Shop Now</a>
+              </div>
+            </div>
+          </div>
+          <div class="right_card">
+            <img src="./assets/deal-zabo.png" alt="" />
+            <div class="text_card text_right">
+              <h3 class="noto_saris" id="text">25% Off | Zabo Plant</h3>
+              <a id="text_small" href="">Shop Now</a>
+            </div>
+          </div>
+        </div>
+      </section>
 
     </main>
+
+    
 
 
 
