add footer and style

--- a/index.html
+++ b/index.html
@@ -186,6 +186,60 @@
 
     </main>
 
+      <!-- footer sectiio  -->
+    <footer>
+      <section class="join_section">
+        <div class="colorful">
+          <form class="form" action="">
+            <label for="">Join the colorful Bunch</label>
+            <input
+              id="email"
+              placeholder="Write email"
+              type="email"
+              name=""
+              id=""
+            />
+            <input id="submit" type="submit" value="Subscribe" />
+          </form>
+        </div>
+      </section>
+      <!-- footer  -->
+      <section>
+        <div class="all_section">
+          <div class="footer_img">
+            <img src="./assets/logo.png" alt="" />
+            <p>
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop.
+            </p>
+          </div>
+          <div class="first_nav">
+            <ul>
+              <li><a href="">Home</a></li>
+              <li><a href="">About Us</a></li>
+              <li><a href="">Blog</a></li>
+              <li><a href="">FAQ</a></li>
+              <li><a href="">Contact Us</a></li>
+            </ul>
+          </div>
+          <div class="second_nav">
+            <ul>
+              <li><a href="">Features</a></li>
+              <li><a href="">Pricing</a></li>
+              <li><a href="">Privacy Policy</a></li>
+              <li><a href="">Terms of Service</a></li>
+              <li><a href="">Help Center</a></li>
+            </ul>
+          </div>
+          <div class="socal_link">
+            <img src="./assets/icon-linkedin.png" alt="" />
+            <img src="./assets/icon-twitter.png" alt="" />
+            <img src="./assets/icon-facebook.png" alt="" />
+            <img src="./assets/icon-youtube.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </footer>
     
 
 
